<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="HistorialPlaces">Historical Places</string>
    <string name="FoodStreets">Food</string>
    <string name="ShoppingPlaces">Shopping Places</string>
    <string name="Hotels">Hotels</string>
    <string name="Specials">Specials</string>
    <string name="ras_mancha">Ras Mancha</string>
    <string name="pancha_ratna_shyam_rai_temple">Pancha Ratna Shyam Rai temple</string>
    <string name="jorebangla_temple">JoreBangla Temple</string>
    <string name="madan_mohan_temple">Madan Mohan Temple</string>
    <string name="radha_shyam_temple">Radha Shyam Temple</string>
    <string name="radhe_shyam_temple">Radhe Shyam Temple</string>
    <string name="lalji_temple">Lalji Temple</string>
    <string name="dalmadal_kaman">DalMadal Kaman</string>
    <string name="mrinmoyee_temple">Mrinmoyee Temple</string>
    <string name="the_rasmancha_bengali_raasmoncho_is_a_historical_temple_located_at_bishnupur_bankura_district_west_bengal_india_it_was_commissioned_by_mallabhum_king_hambir_malla_dev_bir_hambir_in_1600_ce_length_and_breadth_of_this_temple_is_24_5_meter_and_the_height_is_12_5_meter_the_base_or_altar_of_the_temple_is_made_of_laterite_stone_and_upper_part_is_made_with_bricks_upper_structure_looks_like_a_pyramid_middle_part_resembles_bengali_huts_and_the_arches_of_the_lower_part_resembles_islamic_architecture_during_the_vaishnava_ras_festival_all_the_radha_krishna_idols_of_bishnupur_town_used_to_be_brought_here_to_be_worshipped_by_the_citizens_the_annual_festival_was_held_till_1932">The Rasmancha (Bengali: রাসমঞ্চ; Raasmoncho) is a historical temple located at Bishnupur, Bankura district, West Bengal, India. It was commissioned by Mallabhum king Hambir Malla Dev (Bir Hambir) in 1600 CE. Length and breadth of this temple is 24.5 meter and the height is 12.5 meter. The base or altar of the temple is made of laterite stone and upper part is made with bricks. Upper structure looks like a pyramid. Middle part resembles Bengali huts and the arches of the lower part resembles Islamic architecture. During the Vaishnava Ras festival, all the Radha Krishna idols of Bishnupur town used to be brought here to be worshipped by the citizens. The annual festival was held till 1932.</string>
    <string name="another_ancient_temple_in_bishnupur_manipur_is_jorebangla_temple_it_was_malla_king_raghunath_singha_dev_who_built_this_beautiful_hindu_temple_in_the_year_1655_the_temple_is_also_known_as_yorubangala_and_boasts_a_magnificent_architectural_design_however_the_structure_of_the_temple_is_seated_on_a_high_platform_using_laterite_bricks_although_the_temple_is_not_much_into_the_spotlight_in_the_outer_world_but_it_is_very_much_popular_in_the_region_throughout_the_year_this_popular_tourist_attraction_in_bishnupur_is_explored_by_numerous_travellers_who_know_about_this_place_one_of_the_highlights_of_this_17th_century_temple_is_the_intricate_carvings_that_are_put_up_on_both_outer_and_inner_walls_of_the_temple_on_a_trip_to_bishnupur_jorebangla_temple_is_an_important_attraction_to_visit">Another ancient temple in Bishnupur, Manipur is Jorebangla Temple. It was Malla King, Raghunath Singha Dev who built this beautiful Hindu temple in the year 1655. The temple is also known as Yorubangala and boasts a magnificent architectural design. However, the structure of the temple is seated on a high platform using Laterite bricks. Although the temple is not much into the spotlight in the outer world, but, it is very much popular in the region. Throughout the year, this popular tourist attraction in Bishnupur is explored by numerous travellers who know about this place. One of the highlights of this 17th-century temple is the intricate carvings that are put up on both outer and inner walls of the temple. On a trip to Bishnupur, Jorebangla Temple is an important attraction to visit.</string>
    <string name="built_by_king_raghunath_singha_it_stands_on_a_low_square_plinth_and_consists_of_an_ambulatory_pathway_with_a_porch_opened_by_three_arches_on_the_four_sides_of_the_temple_the_central_shikhara_is_octagonal_while_the_rest_four_are_square_the_walls_are_richly_decorated_with_terracotta_carvings_featuring_aspects_of_lord_krishna_s_life">Built by King Raghunath Singha. It stands on a low square plinth and consists of an ambulatory pathway with a porch opened by three arches on the four sides of the temple. The central shikhara is octagonal, while the rest four are square. The walls are richly decorated with terracotta carvings featuring aspects of Lord Krishna’s life.</string>
    <string name="traces_its_history_from_1758_radha_shyam_temple_in_bishnupur_was_constructed_by_the_king_chaitanya_singha_devoted_to_lord_krishna_the_temple_is_located_near_another_historical_shrine_jorbangla_temple_radha_shyam_temple_is_dome_shaped_and_it_lies_within_an_enclosure_which_is_surrounded_by_the_boundary_wall_along_with_its_high_sacred_significance_the_temple_is_known_for_its_aesthetic_architecture_which_makes_a_popular_tourist_attraction_in_bishnupur_because_of_its_historical_significance_and_heritage_value_the_temple_is_well_preserved_by_the_archaeological_survey_of_india_asi_enshrining_the_images_of_lord_krishna_and_radha_in_the_sanctum_the_radha_shyam_temple_is_esteemed_as_the_living_shrine_in_the_region_along_with_the_radha_and_shyam_lord_krishna_the_sanctum_also_includes_the_images_of_nityananda_and_chaitanya_in_the_temple_vicinity_there_is_another_shrine_which_houses_the_idols_of_lord_jagannath_of_puri_and_also_nityananda_and_chaitanya_throughout_the_year_this_beautiful_temple_in_bishnupur_is_visited_by_numerous_visitors_some_come_to_offer_their_homage_while_others_visit_the_temple_just_to_adore_exquisite_grandeur">Traces its history from 1758, Radha Shyam Temple in Bishnupur was constructed by the King Chaitanya Singha. Devoted to Lord Krishna, the temple is located near another historical shrine Jorbangla Temple. Radha Shyam Temple is dome-shaped and it lies within an enclosure which is surrounded by the boundary wall. Along with its high sacred significance, the temple is known for its aesthetic architecture which makes a popular tourist attraction in Bishnupur. Because of its historical significance and heritage value, the temple is well preserved by the Archaeological Survey of India (ASI). Enshrining the images of Lord Krishna and Radha in the sanctum, the Radha Shyam Temple is esteemed as the living shrine in the region. Along with the Radha and Shyam (Lord Krishna), the sanctum also includes the images of Nityananda and Chaitanya. In the temple vicinity, there is another shrine which houses the idols of Lord Jagannath of Puri and also Nityananda and Chaitanya. Throughout the year, this beautiful temple in Bishnupur is visited by numerous visitors; some come to offer their homage, while, others visit the temple just to adore exquisite grandeur.</string>
    <string name="lalji_temple_has_been_built_by_malla_king_bir_singha_with_shikhara_and_built_on_raised_platform_of_square_shape_this_temple_has_been_devoted_to_radha_krishna_and_is_similar_to_that_of_bengali_architecture_with_ornamental_stucco_decorations_in_front_of_the_temple_there_is_dancing_hall_and_there_is_tower_in_the_west_dedicated_to_raghunath_outer_yard_is_divided_from_the_inner_by_a_wall_and_contains_a_small_pancharatna_temple_of_kameswar_siva_the_temple_is_enclosed_by_wall_entirely_with_a_gateway_passage_towards_east_in_front_of_the_gateway_are_two_cars_are_there_one_for_lord_lalji_and_the_other_from_lord_raghunath_they_are_taken_out_in_procession_during_dussera_festival_there_are_inscriptions_in_bengali_at_several_places_trains_and_buses_both_can_be_taken_depending_on_the_comfort_of_person">Lalji Temple has been built by Malla king Bir Singha, with Shikhara and built on raised platform of square shape. This temple has been devoted to Radha-Krishna and is similar to that of Bengali architecture with ornamental stucco decorations. In front of the temple there is dancing hall and there is tower in the west dedicated to Raghunath. Outer yard is divided from the inner by a wall, and contains a small Pancharatna temple of Kameswar Siva. The temple is enclosed by wall entirely with a gateway passage towards east. In front of the gateway are two cars are there one for Lord Lalji and the other from lord Raghunath. They are taken out in procession during Dussera festival. There are inscriptions in Bengali at several places. Trains and buses both can be taken depending on the comfort of person.</string>
    <string name="during_the_reign_of_bir_hambir_the_dal_madal_one_of_the_largest_bored_cannons_even_made_was_founded_demonstrating_the_skill_of_artisans_of_that_time_dal_madal_was_made_by_jagannath_karmakar_dal_madal_means_destruction_of_enemy">During the reign of Bir Hambir the Dal Madal, one of the largest-bored cannons even made, was founded, demonstrating the skill of artisans of that time. Dal Madal was made by Jagannath Karmakar. Dal Madal means destruction of enemy.</string>
    <string name="chicken_pakoras_from_bishnupur_street_food">Chicken Pakoras, from Bishnupur Street Food</string>
    <string name="momo_from_sana_momo_centre_shalbagan_mayra_pukur">Momo, from Sana Momo Centre, Shalbagan, Mayra Pukur</string>
    <string name="lassi_from_lassi_centre_and_resturant_poka_bandh_north_chawk_bazar">Lassi, from Lassi Centre and Resturant, Poka Bandh North, Chawk Bazar</string>
    <string name="biryani_from_heritage_no1_biryani_and_haji_biryani_house_dalmadal_para">Biryani, from Heritage No1 Biryani and Haji Biryani House, Dalmadal Para</string>
    <string name="postor_bora_from_park_hotel_and_resturant_high_school_more_dalmadal_para">Postor Bora, from Park Hotel and Resturant, High School more, Dalmadal Para</string>
    <string name="pera_from_kalpataru_mistanna_bhandar_kalindibandh">Pera, from Kalpataru Mistanna Bhandar, Kalindibandh</string>
    <string name="mecha_sandesh_from_maa_chinnamasta_mistanna_vandar_bishnupur_college_rd_dalmadal_para">Mecha Sandesh, from Maa Chinnamasta Mistanna Vandar, Bishnupur College Rd, Dalmadal Para</string>
    <string name="jd_bazaar">Jd Bazaar</string>
    <string name="kolkata_trends">Kolkata Trends</string>
    <string name="chandan_dress_house">Chandan Dress House</string>
    <string name="kaniska">Kaniska</string>
    <string name="anuvab">Anuvab</string>
    <string name="anuska">Anuska</string>
    <string name="m_s_fatelal_oswal">M/S Fatelal Oswal</string>
    <string name="new_anuvab">New Anuvab</string>
    <string name="mallabhum_silk_centre">Mallabhum Silk Centre</string>
</resources>